fix hero image horizontal overflow

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -43,6 +43,8 @@ main {
         width: 100%;
         flex-direction: row;
         justify-content: space-between;
+        overflow-x: hidden;
+
 
         .hero_image {
             width: 55%;
